[tool.poetry]
name = "unicorn-backup"
version = "1.0.0"
description = "B2 Backup Utility"
authors = ["John Purcell <jpurcell.ee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
click = "^8.1.8"
b2sdk = "^2.7.0"
loguru = "^0.7.3"
click-loguru = "^1.3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
nox = "^2024.10.9"
nox-poetry = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
unicorn-backup = "unicorn_backup.cli:cli"
